@@ -8,6 +8,7 @@ dpkg (1.17.11) UNRELEASED; urgency=low
   * Changes to libcompat:
     - Make the library testable.
     - Do not run qsort() over the scandir() list if it is NULL.
+    - Add a setexecfilecon() compatibility function out from dpkg code.
   * Use SELinux setexecfilecon() if available in dpkg instead of ad-hoc code.
 
   [ Updated programs translations ]
